<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".vse_pob">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="240dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/vsechny"
        android:textColor="@color/text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lid_vsech"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/lidova"
        android:textColor="@color/text"
        android:background="@drawable/tl_nav"
        android:fontFamily="@font/quicksand_light"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ved_vsech"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/vedecka"
        android:textColor="@color/text"
        android:background="@drawable/tl_nav"
        android:fontFamily="@font/quicksand_light"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lid_vsech" />

    <Button
        android:id="@+id/hor_vsech"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/tl_nav"
        android:fontFamily="@font/quicksand_light"
        android:stateListAnimator="@null"
        android:text="@string/hornicka_vse"
        android:textColor="@color/text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ved_vsech" />

    <Button
        android:id="@+id/str_vsech"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/stribrniky_vse"
        android:textColor="@color/text"
        android:background="@drawable/tl_nav"
        android:fontFamily="@font/quicksand_light"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hor_vsech" />

    <Button
        android:id="@+id/kli_vsech"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/klise_vse"
        android:textColor="@color/text"
        android:background="@drawable/tl_nav"
        android:fontFamily="@font/quicksand_light"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/ved_vsech" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/dalsi"
        android:textAlignment="center"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/str_vsech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/kli_vsech" />

</androidx.constraintlayout.widget.ConstraintLayout>